add association check at beginning of mock method